sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: ')' expected but '<-' found.
while(i <- 0 to 10) 
        ^AlgBubbleSort1:8: error: ';' expected but ')' found.
if(getValeurs(i int) < getValeurs(i+1))
                                      ^